src/test/scala/wacc/wacc_examples/invalid/semanticErr/annotations/tailrec/nonTailRecursive.wacc
# no tail recursion

# Output:
# #semantic_error#

# Exit:
# 200

# Program:
begin
    @tailrec
    int fib(int n) is
        if n <= 1
        then
            return n
        else
            skip
        fi ;
        int f1 = call fib(n - 1) ;
        int f2 = call fib(n - 2) ;
        return f1 + f2
    end 

    int x = call fib(7) ;
    exit x

end